<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:textSize="26sp"
            android:layout_width="400dp"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculadora_de_imc"
            android:textAlignment="center" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#006665" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/introduzca_su_peso_en_kg"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/introduzca_su_altura_en_m"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="312dp"
            android:layout_height="57dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:backgroundTint="#006665"
            android:text="@string/calcular"
            />

        <TextView
            android:id="@+id/textView2"
            android:textSize="26sp"
            android:layout_width="400dp"
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resultado"
            android:textAlignment="center" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#006665" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>